--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-trunk": "1.2.x-dev"
+            "dev-master": "1.2.x-dev"
         }
     }
 
