--- a/composer.json
+++ b/composer.json
@@ -2,32 +2,28 @@
     "name": "ttek/tk-framework",
     "type": "library",
     "description": "This is the main tropotek framework",
-    "keywords":  [
-        "Tk",
-        "framework",
-        "tropotek"
-    ],
+    "keywords": ["Tk", "framework", "tropotek"],
     "homepage": "http://www.tropotek.com/",
-    "time": "2014-12-09",
+    "time":  "2010-12-09",
     "license": "MIT",
-    "version": "1.2.4",
-    "authors":  [
-         {
+    "version": "trunk",
+    "authors": [
+        {
             "name": "Michael Mifsud",
             "email": "info@tropotek.com",
             "homepage": "http://www.tropotek.com/"
         }
     ],
-    "require":  {
+    "require": {
         "php": ">=5.3.0"
     },
-    "autoload":  {
-        "psr-0":  {
+    "autoload": {
+        "psr-0": {
             "Tk\\": ""
         }
     },
-    "extra":  {
-        "branch-alias":  {
+    "extra": {
+        "branch-alias": {
             "dev-master": "1.2.x-dev"
         }
     }
