--- a/composer.json
+++ b/composer.json
@@ -2,28 +2,32 @@
     "name": "ttek/tk-framework",
     "type": "library",
     "description": "This is the main tropotek framework",
-    "keywords": ["Tk", "framework", "tropotek"],
+    "keywords":  [
+        "Tk",
+        "framework",
+        "tropotek"
+    ],
     "homepage": "http://www.tropotek.com/",
-    "time":  "2010-12-09",
+    "time": "2015-06-18",
     "license": "MIT",
-    "version": "trunk",
-    "authors": [
-        {
+    "version": "1.2.10",
+    "authors":  [
+         {
             "name": "Michael Mifsud",
             "email": "info@tropotek.com",
             "homepage": "http://www.tropotek.com/"
         }
     ],
-    "require": {
+    "require":  {
         "php": ">=5.3.0"
     },
-    "autoload": {
-        "psr-0": {
+    "autoload":  {
+        "psr-0":  {
             "Tk\\": ""
         }
     },
-    "extra": {
-        "branch-alias": {
+    "extra":  {
+        "branch-alias":  {
             "dev-master": "1.2.x-dev"
         }
     }
