--- a/composer.json
+++ b/composer.json
@@ -1,37 +1,34 @@
 {
-    "name": "ttek/tk-framework",
-    "type": "library",
-    "description": "Tropotek Framework V2",
-    "keywords": ["Tk", "framework", "tropotek"],
-    "homepage": "http://www.tropotek.com/",
-    "time":  "2010-12-09",
-    "license": "MIT",
-    "version": "trunk",
-    "authors": [
-        {
-            "name": "Michael Mifsud",
-            "email": "info@tropotek.com",
-            "homepage": "http://www.tropotek.com/"
-        }
-    ],
-    "autoload": {
-      "psr-0": {
-          "Tk\\": ""
-      }
-    },
-    "require": {
-        "php": ">=5.3.0",
-        
-        "symfony/http-kernel": "2.6.*",
-        "symfony/http-foundation": "2.6.*",
-        "symfony/routing": "2.6.*",
-        "symfony/event-dispatcher": "2.6.*",
-
-        "monolog/monolog": "^1.13@dev"
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "2.0.x-dev"
-        }
+  "name": "ttek/tk-framework",
+  "type": "library",
+  "description": "Tropotek Framework V2",
+  "keywords": [
+    "Tk",
+    "framework",
+    "tropotek"
+  ],
+  "homepage": "http://www.tropotek.com/",
+  "time": "2010-12-09",
+  "license": "MIT",
+  "version": "trunk",
+  "authors": [
+    {
+      "name": "Michael Mifsud",
+      "email": "info@tropotek.com",
+      "homepage": "http://www.tropotek.com/"
     }
+  ],
+  "autoload": {
+    "psr-0": {
+      "Tk\\": ""
+    }
+  },
+  "require": {
+    "php": ">=5.3.0"
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "2.0.x-dev"
+    }
+  }
 }
