--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     }
   },
   "require": {
-    "php": ">=5.4.0"
+    "php": ">=5.4.0", 
+    "psr/log": "~1.0"
   },
   "extra": {
     "branch-alias": {
