--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,13 @@
   "autoload": {
     "psr-0": {
       "Tk\\": ""
-    }
+    },
+    "files": [
+      "Tk/Exception.php"
+    ]
   },
   "require": {
-    "php": ">=5.4.0", 
+    "php": ">=5.4.0",
     "psr/log": "~1.0"
   },
   "extra": {
