--- a/composer.json
+++ b/composer.json
@@ -28,9 +28,7 @@
   },
   "require": {
     "php": ">=5.4.0",
-    "psr/log": "^1.0",
-    "psr/http-message": "^1.0",
-    "psr/cache": "^1.0"
+    "psr/log": "^1.0"
   },
   "extra": {
     "branch-alias": {
