--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,38 @@
 {
-  "name": "ttek/tk-framework",
-  "type": "library",
-  "description": "Tropotek Framework V2",
-  "keywords": [
-    "Tk",
-    "framework",
-    "tropotek"
-  ],
-  "homepage": "http://www.tropotek.com/",
-  "time": "2010-12-09",
-  "license": "MIT",
-  "version": "trunk",
-  "authors": [
-    {
-      "name": "Michael Mifsud",
-      "email": "info@tropotek.com",
-      "homepage": "http://www.tropotek.com/"
-    }
-  ],
-  "autoload": {
-    "psr-0": {
-      "Tk\\": ""
+    "name": "ttek/tk-framework",
+    "type": "library",
+    "description": "Tropotek Framework V2",
+    "keywords":  [
+        "Tk",
+        "framework",
+        "tropotek"
+    ],
+    "homepage": "http://www.tropotek.com/",
+    "time": "2016-10-04",
+    "license": "MIT",
+    "version": "2.0.4",
+    "authors":  [
+         {
+            "name": "Michael Mifsud",
+            "email": "info@tropotek.com",
+            "homepage": "http://www.tropotek.com/"
+        }
+    ],
+    "autoload":  {
+        "psr-0":  {
+            "Tk\\": ""
+        },
+        "files":  [
+            "Tk/Exception.php"
+        ]
     },
-    "files": [
-      "Tk/Exception.php"
-    ]
-  },
-  "require": {
-    "php": ">=5.0.0",
-    "psr/log": "^1.0"
-  },
-  "extra": {
-    "branch-alias": {
-      "dev-master": "2.0.x-dev"
+    "require":  {
+        "php": ">=5.0.0",
+        "psr/log": "^1.0"
+    },
+    "extra":  {
+        "branch-alias":  {
+            "dev-master": "2.0.x-dev"
+        }
     }
-  }
 }
