--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
       "Tk\\": ""
     },
     "files": [
-      "Tk/Exception.php"
+      "Tk/Exception.php",
+      "functions/varDump.php"
     ]
   },
   "require": {
