Minor Code Updates - dev

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "2.0.x-dev"
+      "dev-master": "2.0.x-dev",
+      "monolog/monolog": "^1.0"
     }
   }
 }
