--- a/composer.json
+++ b/composer.json
@@ -2,15 +2,10 @@
     "name": "ttek/tk-framework",
     "type": "library",
     "description": "Tropotek Framework V2",
-    "keywords":  [
-        "Tk",
-        "framework",
-        "tropotek"
-    ],
-    "homepage": "http://www.tropotek.com/",
-    "time": "2018-07-19",
+    "keywords":  ["Tk", "framework", "tropotek"],
+    "time": "2019-04-09",
     "license": "MIT",
-    "version": "2.0.50",
+    "version": "3.0.0",
     "authors":  [
          {
             "name": "Michael Mifsud",
@@ -31,13 +26,12 @@
         ]
     },
     "require":  {
-        "php": ">=5.3.0",
         "psr/log": "^1.0",
         "monolog/monolog": "^1.0"
     },
     "extra":  {
         "branch-alias":  {
-            "dev-master": "2.0.x-dev"
+            "dev-master": "3.0.x-dev"
         }
     }
 }
