--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,10 @@
     },
     "require":  {
         "psr/log": "^1.0",
-        "monolog/monolog": "^1.0"
+        "monolog/monolog": "^1.0",
+        "ttek/tk-installers": "~3.0",
+
+        "symfony/http-foundation": "^4.2"
     },
     "extra":  {
         "branch-alias":  {
