--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "symfony/http-foundation": "^4.2.0"
     },
     "require-dev":  {
-        "symfony/http-foundation": "4.2-dev"
+        "symfony/http-foundation": "^4.2@dev"
     },
     "extra":  {
         "branch-alias":  {
