--- a/composer.json
+++ b/composer.json
@@ -30,10 +30,7 @@
         "monolog/monolog": "^1.0",
         "ttek/tk-installers": "~3.0",
 
-        "symfony/http-foundation": "^4.2.0"
-    },
-    "require-dev":  {
-        "symfony/http-foundation": "^4.2@dev"
+        "symfony/http-foundation": "^4.2.*@stable"
     },
     "extra":  {
         "branch-alias":  {
