--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     },
     "require":  {
         "psr/log": "^1.0",
+        "ext-json": "*",
         "monolog/monolog": "^1.0",
         "ttek/tk-installers": "~3.0",
 
