--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,14 @@
     "name": "ttek/tk-framework",
     "type": "library",
     "description": "Tropotek Framework",
-    "keywords":  ["Tk", "framework", "tropotek"],
-    "time": "2019-04-09",
+    "keywords":  [
+        "Tk",
+        "framework",
+        "tropotek"
+    ],
+    "time": "2020-01-21",
     "license": "MIT",
-    "version": "3.0.0",
+    "version": "3.0.28",
     "authors":  [
          {
             "name": "Michael Mifsud",
@@ -21,7 +25,7 @@
             "Tk/Exception.php",
             "functions/varDump.php"
         ],
-        "exclude-from-classmap": [
+        "exclude-from-classmap":  [
             "/tests/"
         ]
     },
@@ -30,7 +34,6 @@
         "ext-json": "*",
         "monolog/monolog": "^1.0",
         "ttek/tk-installers": "~3.0",
-
         "symfony/http-foundation": "4.2.*"
     },
     "extra":  {
