--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     ]
   },
   "require": {
-    "php": "^7.3.0",
+    "php": "^7.1|^8.0",
     "psr/log": "^1.0",
     "ext-json": "*",
     "ttek/tk-installers": "~3.0.0",
