--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
     "ext-json": "*",
     "ttek/tk-installers": "~3.0.0",
     "monolog/monolog": "^1.0",
-    "symfony/http-foundation": "4.2.*"
+    "symfony/http-foundation": "4.2.*",
+    "lasserafn/php-initial-avatar-generator": "4.2.*"
   },
   "extra": {
     "branch-alias": {
