--- a/composer.json
+++ b/composer.json
@@ -49,8 +49,7 @@
     "symfony/console": "^6.1",
     "symfony/lock": "^6.1",
     "monolog/monolog": "^2.0",
-    "sensiolabs/ansi-to-html": "~1.0",
-    "lasserafn/php-initial-avatar-generator": "4.2.*"
+    "sensiolabs/ansi-to-html": "~1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "9.5.x-dev"
