--- a/composer.json
+++ b/composer.json
@@ -42,8 +42,9 @@
     "ext-curl": "*",
     "ttek/tk-installers": "~8.0",
 
-    "symfony/http-foundation": "^5.4",
+    "symfony/http-foundation": "^6.1",
     "symfony/routing": "^6.1",
+    "symfony/config": "^6.1",
     "symfony/http-kernel": "^6.1",
     "symfony/event-dispatcher": "^6.1",
     "symfony/console": "^6.1",
