--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,12 @@
       "Tk/Exception.php"
     ]
   },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "8.0.x-dev"
+    }
+  },
+
   "require": {
     "php": "^8.2",
     "psr/log": "^1.0",
@@ -48,9 +54,14 @@
     "monolog/monolog": "^2.0",
     "sensiolabs/ansi-to-html": "~1.0"
   },
-  "extra": {
-    "branch-alias": {
-      "dev-master": "8.0.x-dev"
-    }
+
+  "config": {
+    "allow-plugins": {
+      "ttek/tk-installers": true
+    },
+    "preferred-install": {
+      "ttek/*": "source"
+    },
+    "component-dir": "vendor/components"
   }
 }
