--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,8 @@
     "ext-curl": "*",
 
     "ttek/tk-installers": "~8.0.0",
+    "phpmailer/phpmailer": "~6.0",
+
     "symfony/http-foundation": "^6.2",
     "symfony/routing": "^6.2",
     "symfony/http-kernel": "^6.2",
