--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
     "ext-json": "*",
     "ext-curl": "*",
 
-    "phpmailer/phpmailer": "~6.0",
+    "phpmailer/phpmailer": "~6.0"
   },
   "extra": {
     "branch-alias": {
